--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.css';
+/* Import Playfair Display font from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
+/* Apply Playfair Display to headings and titles */
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Playfair Display', serif;
+}
+
+/* Additional styles for your headings */
+h1 {
+  font-size: 36px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+html,body {
+    background-color: rgb(150, 149, 149);
+}
+
+.card {
+    margin-top: 100px;
+    padding: 20px;
+    border-radius: 30px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    background-size: 48px 48px;
+    animation: fadeIn 1s ease-in-out;
+    animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+  
+.card-context {
+    font-size: 16px;
+    line-height: 1.6;
+}
