--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav id="mainNavbar" class="navbar navbar-dark mb-3 navbar-expand-md">
+<nav id="mainNavbar" class="navbar navbar-dark mb-3 navbar-expand-sm">
     <div class="container-fluid">
-        <a class="navbar-brand" [routerLink]="['home']">
+        <a class="navbar-brand" [routerLink]="['history']">
             <img src="../../assets/lateau-logo-circle.png">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,10 +10,10 @@
             <div>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="px-2 nav-link" aria-current="page">Αρχική</a>
+                        <a class="px-2 nav-link" aria-current="page" [routerLink]="['history']">Αρχική</a>
                     </li>
                     <li class="nav-item">
-                        <a class="px-2 nav-link" aria-current="page">Γλυκά</a>
+                        <a class="px-2 nav-link" aria-current="page" [routerLink]="['sweets']">Γλυκά</a>
                     </li>
                 </ul>
             </div>
