sweets component more

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav id="mainNavbar" class="navbar navbar-dark mb-3 navbar-expand-sm">
+<nav id="mainNavbar" class="navbar navbar-dark navbar-expand-sm">
     <div class="container-fluid">
         <a class="navbar-brand" [routerLink]="['history']">
             <img src="../../assets/lateau-logo-circle.png">
