--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container pt-5">
     <div class="card">
         <h1 class="card-title">Η ιστορια μας</h1>
         <div class="card-context">
