--- a/src/styles.css
+++ b/src/styles.css
@@ -20,11 +20,10 @@ h2 {
 }
 
 html,body {
-    background-color: rgb(150, 149, 149);
+    background-color: beige;
 }
 
 .card {
-    margin-top: 100px;
     padding: 20px;
     border-radius: 30px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
