--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-navbar></app-navbar>
-<div>
-    <router-outlet></router-outlet>
+<div class="wrapper">
+    <app-navbar></app-navbar>
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
 </div>
