--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav id="mainNavbar" class="navbar navbar-dark navbar-expand-sm">
+<nav id="mainNavbar" class="navbar navbar-dark navbar-expand">
     <div class="container-fluid">
         <a class="navbar-brand" [routerLink]="['history']">
             <img src="../../assets/lateau-logo-circle.png">
@@ -20,3 +20,4 @@
         </div>
     </div>
 </nav>
+<div id="triangle-bottomright"></div>
