--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
                     <li class="nav-item">
                         <a class="px-2 nav-link" aria-current="page" [routerLink]="['sweets']">Γλυκά</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="px-2 nav-link" aria-current="page" [routerLink]="['about']">Πληροφορίες</a>
+                    </li>
                 </ul>
             </div>
         </div>
