--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,5 +1,9 @@
 <div class="map-container m-3" id="locationMap">
-    <div class="map-frame">
-        <div id="map"></div>
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="map-frame col-md-6">
+            <div id="map"></div>
+        </div>
+        <div class="col-md-3"></div>
     </div>
 </div>
