--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,6 +18,9 @@
                     <li class="nav-item">
                         <a class="px-2 nav-link" aria-current="page" [routerLink]="['about']">Πληροφορίες</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="px-2 nav-link" aria-current="page" [routerLink]="['slot']">Κιντερ Εκπληξη</a>
+                    </li>
                 </ul>
             </div>
         </div>
